landscape-flare/src/tui/snapshots/lflare__tui__snapshots__form-filled-zh.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"                                    lflare · Landscape L2 客户端                                    " Hidden by multi-width symbols: [(59, " "), (61, " "), (63, " ")]
"Tab/上下切换字段 · 聚焦连接后按 Enter · F2 显示/隐藏 PSK · l 切换语言 · Ctrl-Q 退出                 " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (44, " "), (46, " "), (49, " "), (51, " "), (62, " "), (64, " "), (66, " "), (68, " "), (80, " "), (82, " ")]
"┌PSK（共享密钥，F2 显示/隐藏）─────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (20, " "), (22, " "), (25, " "), (27, " "), (29, " ")]
"│*********************                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌用户名────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " ")]
"│ops                                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌客户端名称────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " ")]
"│office-pc                                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌设备（Enter 选择）────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (14, " "), (16, " "), (18, " ")]
"│自动（默认路由）                                                                                  │" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Ethertype─────────────────────────────────────────────────────────────────────────────────────────┐"
"│0x88b6                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Token（可选，需与服务端一致）─────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌连接──────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│                                               连接                                               │" Hidden by multi-width symbols: [(49, " "), (51, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
