landscape-flare/src/tui/snapshots/lflare__tui__snapshots__too-small-71x17-en.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"┌lflare───────────────────────────────────────────────────────────────┐"
"│              Terminal too small (needs at least 60x24)              │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"└─────────────────────────────────────────────────────────────────────┘"
