landscape-flare/src/tui/snapshots/lflare__tui__snapshots__too-small-71x17-zh.snap
---
source: landscape-flare/src/tui/snapshots.rs
expression: terminal.backend()
---
"┌lflare───────────────────────────────────────────────────────────────┐"
"│                     终端过小（至少需要 60x24）                      │" Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (47, " ")]
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"│                                                                     │"
"└─────────────────────────────────────────────────────────────────────┘"
